hphp/hack/test/typecheck/typed_locals/init-errors-shadow.php.exp
File "init-errors-shadow.php", line 6, characters 3-25:
Typing error (Typing[4110])
  File "init-errors-shadow.php", line 5, characters 12-17:
  Expected `string`
  File "init-errors-shadow.php", line 6, characters 12-19:
  But got `arraykey`
File "init-errors-shadow.php", line 13, characters 5-27:
Typing error (Typing[4110])
  File "init-errors-shadow.php", line 11, characters 12-17:
  Expected `string`
  File "init-errors-shadow.php", line 13, characters 14-21:
  But got `arraykey`
File "init-errors-shadow.php", line 16, characters 3-24:
Typing error (Typing[4110])
  File "init-errors-shadow.php", line 14, characters 14-16:
  Expected `int`
  File "init-errors-shadow.php", line 16, characters 12-19:
  But got `arraykey`
